Updated Haply include paths in VS2022 project.

--- a/chai3d-VS2022.vcxproj
+++ b/chai3d-VS2022.vcxproj
@@ -697,14 +697,14 @@
     <ClInclude Include="externals/pugixml/include/pugiconfig.hpp" />
     <ClInclude Include="externals/pugixml/include/pugixml.hpp" />
     <ClInclude Include="externals/STB/include/stb_image.h" />
-    <ClInclude Include="externals\haply\Device.h" />
-    <ClInclude Include="externals\haply\DeviceDetection.h" />
-    <ClInclude Include="externals\haply\Handle.h" />
-    <ClInclude Include="externals\haply\HardwareAPI.h" />
-    <ClInclude Include="externals\haply\Inverse3.h" />
-    <ClInclude Include="externals\haply\SerialDeviceProvider.h" />
-    <ClInclude Include="externals\haply\SerialStream.h" />
-    <ClInclude Include="externals\haply\UUID.h" />
+    <ClInclude Include="externals\haply\include\Device.h" />
+    <ClInclude Include="externals\haply\include\DeviceDetection.h" />
+    <ClInclude Include="externals\haply\include\Handle.h" />
+    <ClInclude Include="externals\haply\include\HardwareAPI.h" />
+    <ClInclude Include="externals\haply\include\Inverse3.h" />
+    <ClInclude Include="externals\haply\include\SerialDeviceProvider.h" />
+    <ClInclude Include="externals\haply\include\SerialStream.h" />
+    <ClInclude Include="externals\haply\include\UUID.h" />
     <ClInclude Include="externals\RtMidi\RtMidi.h" />
     <ClInclude Include="src/audio/CAudioBuffer.h" />
     <ClInclude Include="src/audio/CAudioDevice.h" />
