--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,7 +104,7 @@ if (${CMAKE_SYSTEM_NAME} MATCHES Windows)
     if (MSVC)
         add_definitions (-D_CRT_SECURE_NO_DEPRECATE)
         set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc /MP /std:c++17")
-        if (${CMAKE_SYSTEM_NAME} MATCHES Release)
+        if (${CMAKE_BUILD_TYPE} MATCHES Release)
             set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /GL /Ot")
         endif ()
         if (${CMAKE_CL_64})
@@ -215,6 +215,7 @@ if (${CMAKE_SYSTEM_NAME} MATCHES Windows)
         if (${CMAKE_BUILD_TYPE} MATCHES Debug)
             set (HAPLY_LIB_DIR ${PROJECT_SOURCE_DIR}/externals/haply/windows/Haply.HardwareAPId.lib)
         else ()
+            target_link_options (chai3d PRIVATE "/LTCG")
             set (HAPLY_LIB_DIR ${PROJECT_SOURCE_DIR}/externals/haply/windows/Haply.HardwareAPI.lib)
         endif ()
     elseif (MINGW)
